--- a/my-first-react-app/src/scss/_signin.scss
+++ b/my-first-react-app/src/scss/_signin.scss
@@ -17,6 +17,10 @@
     border-radius: 20px;
     box-shadow: 0px 6px 20px rgba(13, 76, 211, 0.1);
 
+    .form-login{
+        height: 200px;
+    }
+
     h2{
         font-size: 24px;
         font-weight: 600;
@@ -26,7 +30,7 @@
 
     form{
         width: 400px;
-        height: 200px;
+        
 
         .input-login{
             position: relative;
